--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,23 +4,22 @@ name: Release
 on:
   push:
     tags:
-      - "v*"
+      - 'v*'
 
 # Automatically create a GitHub Release, with release details specified (the relevant commits)
 jobs:
   release:
-    name: "Release"
-    runs-on: "ubuntu-latest"
+    name: 'Release'
+    runs-on: 'ubuntu-latest'
     steps:
-
       - uses: actions/checkout@v2
 
       - name: Create Zip
         run: zip -r theme-default.zip index.scss logo.png theme.json
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - uses: 'marvinpinto/action-automatic-releases@latest'
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          repo_token: '${{ secrets.GITHUB_TOKEN }}'
           prerelease: false
           files: |
             theme-default.zip
